5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4073/executions/1668_1398.log
== TEST (2019-04-15 18:42:08) 
-- CODE:
a = 200 
b = 100
ab=input(a*b):
	
-- ERROR:
File "XXXX", line 3
    ab=input(a*b):
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:42:16) 
-- CODE:
a = 200 
b = 100
ab=input(a*b):
-- ERROR:
File "XXXX", line 3
    ab=input(a*b):
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:42:19) 
-- CODE:
a = 200 
b = 100
ab=input(a*b):
-- ERROR:
File "XXXX", line 3
    ab=input(a*b):
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:42:30) 
-- CODE:
a = 200 
b = 100
ab=input(a*b:)
-- ERROR:
File "XXXX", line 3
    ab=input(a*b:)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:42:32) 
-- CODE:
a = 200 
b = 100
ab=input(a*b:)
-- ERROR:
File "XXXX", line 3
    ab=input(a*b:)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:43:11) 
-- CODE:
a = 200 
b = 100
ab=input(a*b)
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(mensagem)
NameError: name 'mensagem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 18:43:14) 
-- CODE:
a = 200 
b = 100
ab=input(a*b)
print(mensagem)
-- EXECUTION TIME:
0.10112
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1668/1398/main.py", line 4, in <module>
    print(mensagem)
NameError: name 'mensagem' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:43:15) 
-- CODE:
a = 200 
b = 100
ab=input(a*b)
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(mensagem)
NameError: name 'mensagem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:43:32) 
-- CODE:
a = 200 
b = 100
ab=input(a*3b)
print(mensagem)
-- ERROR:
File "XXXX", line 3
    ab=input(a*3b)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 18:43:32) 
-- CODE:
a = 200 
b = 100
ab=input(a*3b)
print(mensagem)
-- EXECUTION TIME:
0.147329
-- ERROR:
  File "/home/codebench/codes/1668/1398/main.py", line 3
    ab=input(a*3b)
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:43:34) 
-- CODE:
a = 200 
b = 100
ab=input(a*3b)
print(mensagem)
-- ERROR:
File "XXXX", line 3
    ab=input(a*3b)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:43:43) 
-- CODE:
a = 200 
b = 100
ab=input(a*b):
print(mensagem)
-- ERROR:
File "XXXX", line 3
    ab=input(a*b):
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
